contact form and styling done

--- a/final/site.html
+++ b/final/site.html
@@ -31,6 +31,7 @@
                 <li><a href="case.html">Case</a></li>
                 <li><a href="cpuinfo.html">CPU Info</a></li>
                 <li><a href="mobo.html">Motherboards</a></li>
+                <li><a href="contact.html">Contact Page</a></li>
             </ul>
         </main>
 
