added hero image with background-size cover

--- a/final/index.html
+++ b/final/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="A page all about building gamming pcs">
         <title>Building a PC</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="icon" href="img/placeholder.png" type="image/x-icon">
+        <link rel="icon" href="img/favicon.jpg" type="image/x-icon">
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
@@ -37,6 +37,17 @@
         </header>
 
         <main>
+            <div class="hero">
+                <article>
+                    <h2>Building a Gaming Rig</h2>
+                    <h3 class="colspan">Custom Gaming PC Builds Made Easy</h3>
+                    <p class="colspan">Not sure where to start? This site will show you most of what you need to know about selecting parts.</p>
+                    <figure>
+                        <img src="img/hero.jpg" alt="example pc gaming rig" title="Lets setup a gaming rig!" height="200" width="200" loading="lazy">
+                        <figcaption>Image generated with <a href="https://deepai.org" target="_blank">DeepAI Image Generator</a></figcaption>
+                    </figure>
+                </article>
+            </div>
             <article id="components">
                 <h2>Choosing the Right Components</h2>
                 <section>
