--- a/final/cpuinfo.html
+++ b/final/cpuinfo.html
@@ -6,7 +6,7 @@
         <meta name="description" content="Even More Information about the CPU">
         <title>Even More CPU</title>
                 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="icon" href="img/placeholder.png" type="image/x-icon">
+        <link rel="icon" href="img/favicon.jpg" type="image/x-icon">
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
