added links to contact page

--- a/final/case.html
+++ b/final/case.html
@@ -5,7 +5,7 @@
         <meta name="author" content="Cory Brown">
         <meta name="description" content="A bit about the case">
         <title>The Case</title>
-                <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="icon" href="img/favicon.jpg" type="image/x-icon">
         <link rel="stylesheet" href="style.css">
     </head>
@@ -57,7 +57,7 @@
         </main>
 
         <footer>
-            <p><a href="#">Back to top</a> <a href="index.html">Home</a> <a href="site.html">Site Page</a></p>
+            <p><a href="#">Back to top</a> <a href="index.html">Home</a> <a href="site.html">Site Page</a> <a href="contact.html">Contact</a></p>
         </footer>
     </body>
 </html>
