--- a/final/index.html
+++ b/final/index.html
@@ -200,7 +200,7 @@
 
         <footer>
             <p>AI used to generate all text: <a href="https://chatgpt.com" target="_blank">ChatGPT</a></p>
-            <p><a href="#">Back to top</a> <a href="site.html">Site Page</a></p>
+            <p><a href="#">Back to top</a> <a href="site.html">Site Page</a> <a href="contact.html">Contact</a></p>
         </footer>
     </body>
 </html>
