--- a/final/cpu.html
+++ b/final/cpu.html
@@ -46,7 +46,7 @@
         </main>
 
         <footer>
-            <p><a href="#">Back to top</a> <a href="index.html">Home</a> <a href="site.html">Site Page</a></p>
+            <p><a href="#">Back to top</a> <a href="index.html">Home</a> <a href="site.html">Site Page</a> <a href="contact.html">Contact</a></p>
         </footer>
     </body>
 </html>
