--- a/final/site.html
+++ b/final/site.html
@@ -36,7 +36,7 @@
         </main>
 
         <footer>
-            <p><a href="#">Back to top</a> <a href="index.html">Home</a></p>
+            <p><a href="#">Back to top</a> <a href="index.html">Home</a> <a href="contact.html">Contact</a></p>
         </footer>
     </body>
 </html>
