added about page and updated site menu

--- a/final/mobo.html
+++ b/final/mobo.html
@@ -20,6 +20,7 @@
                     <li><a href="case.html">Case</a></li>
                     <li><a href="cpu.html">CPU</a></li>
                     <li><a href="gpu.html">GPU</a></li>
+                    <li><a href="about.html">About Me</a></li>
                 </ul>
             </nav>
             </header>
@@ -111,7 +112,7 @@
         </main>
 
         <footer>
-            <p><a href="#">Back to top</a> <a href="index.html">Home</a> <a href="site.html">Site Page</a></p>
+            <p><a href="#">Back to top</a> <a href="index.html">Home</a> <a href="site.html">Site Page</a> <a href="contact.html">Contact Me</a></p>
         </footer>
     </body>
 </html>
