--- a/final/site.html
+++ b/final/site.html
@@ -32,6 +32,7 @@
                 <li><a href="cpuinfo.html">CPU Info</a></li>
                 <li><a href="mobo.html">Motherboards</a></li>
                 <li><a href="contact.html">Contact Page</a></li>
+                <li><a href="about.html">About Me</a></li>
             </ul>
         </main>
 
