--- a/final/about.html
+++ b/final/about.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <header>
-            <h1></h1>
+            <h1>About Me</h1>
             <nav class="nav2">
                 <h5>Menu</h5>
                 <ul>
@@ -23,7 +23,21 @@
         </header>
 
         <main>
-            
+            <article>
+                <h2>The Site</h2>
+                <section>
+                    <h3 class="colspan">What's It About</h3>
+                    <p class="colspan">This site is all about building a gaming pc. Here one should be able to aquire the majority of the information needed to build their own gaming pc.</p>
+                    <h3>Who is this site for?</h3>
+                    <p>This site is for anyone looking to build a gaming pc and feel it is a massive undertaking. Building a gaming pc is actually quite simple there are however some things to be aware of when selecting parts but other than that the building process itself is usually very straight forward.</p>
+                    <h3>The Inspiration</h3>
+                    <p>I enjoy building gaming systems and thought it would be cool to make my project revolve around that.</p>
+                </section>
+                <section>
+                    <h2>Future Plans</h2>
+                    <p class="colspan">This site could really use more detailed information on the process of building the system itself. It could also use some work outlining the importance of being sure that parts are compatible. For instance the motherboard and CPU need to be compatible and the chosen RAM needs to be compatible with the motherboard as well. Not just anything will work here. Most other considerations don't require such forethought though.</p>
+                </section>
+            </article>
         </main>
 
         <footer>
