--- a/final/contact.html
+++ b/final/contact.html
@@ -18,6 +18,7 @@
                     <li><a href="case.html">Case</a></li>
                     <li><a href="cpu.html">CPU</a></li>
                     <li><a href="gpu.html">GPU</a></li>
+                    <li><a href="about.html">About Me</a></li>
                 </ul>
             </nav>
         </header>
